# rtengine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: PhysX.cmake
scripts/: build_physx.sh  setup.sh
shaders/: fragment.glsl  vertex.glsl
src/: main.cpp
